--- a/app/src/main/res/layout/content_chatroom.xml
+++ b/app/src/main/res/layout/content_chatroom.xml
@@ -65,7 +65,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -86,7 +86,7 @@
 
                 <androidx.core.widget.NestedScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="400dp"
+                    android:layout_height="wrap_content"
                     android:fillViewport="false">
 
                     <LinearLayout
