--- a/app/src/main/res/layout/content_chatting.xml
+++ b/app/src/main/res/layout/content_chatting.xml
@@ -57,7 +57,6 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="700dp"
-            
             android:layout_weight="1">
 
             <LinearLayout
@@ -73,7 +72,7 @@
 
 
                     <ImageView
-                        android:id="@+id/imageViewt"
+                        android:id="@+id/imageViewta"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginBottom="10dp"
@@ -89,7 +88,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textViewtt"
+                            android:id="@+id/textViewta"
                             android:layout_width="340dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
@@ -101,7 +100,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/textViewttttt"
+                            android:id="@+id/textViewttat"
                             android:layout_width="340dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
@@ -121,7 +120,7 @@
 
 
                     <ImageView
-                        android:id="@+id/imageViewat"
+                        android:id="@+id/imageViewt"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginBottom="10dp"
